# sdk-actions

./: CONTRIBUTING.md  PLAN.md  README.md  Rakefile  mise.toml
.github/workflows/: agent-automation-reusable.yml  agent-automation.yml  braintrust-security-audit.yml  ci.yml  dependabot-security-alerts.yml  issue-revalidation-audit.yml  library-gap-audit.yml  release-js.yml  release-py.yml  release-ruby.yml
actions/lang/ruby/env-dump/: action.yml
actions/release/create-github-release/: action.yml
actions/release/notify-failure/: action.yml
actions/release/notify-pending/: action.yml
actions/release/notify-published/: action.yml
actions/release/prepare/: action.yml
actions/release/ruby/publish/: action.yml
actions/release/ruby/validate/: action.yml
actions/release/validate/: action.yml
actions/slack/send/: action.yml
docs/design/: release-actions-v2.md
scripts/: generate.rb
templates/actions/release/: notify-pending.yml.erb
templates/steps/lang/js/: build.yml.erb  env-dump.yml.erb  read-version.yml.erb  setup.yml.erb
templates/steps/lang/py/: build.yml.erb  env-dump.yml.erb  read-version.yml.erb  setup.yml.erb
templates/steps/release/: attest-provenance.yml.erb  attest-sbom.yml.erb  create-github-release.yml.erb  notify-failure.yml.erb  notify-published.yml.erb  validate.yml.erb
templates/steps/slack/: send.yml.erb
test/release/js/: package.json
test/release/py/: .gitignore  README.md  pyproject.toml
test/release/py/src/bt_publishing_test/: version.py
test/release/ruby/: Gemfile  Rakefile  bt-fake.gemspec  bt-publishing-test.gemspec
(+38 files in other folders)
